# aigrandprix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aigrandprix/: config.py  runner.py  timing.py  types.py
aigrandprix/adapters/: base.py  mock.py  official.py
aigrandprix/augmentation/: transforms.py
aigrandprix/brain/: fusion.py  planner.py  states.py
aigrandprix/controller/: pid.py
aigrandprix/lobes/: progress.py  recovery.py  risk.py  stability.py  vision.py  vision_ml.py
aigrandprix/logging/: run_logger.py
aigrandprix/ml/: dataset.py  model.py
checkpoints/: gate_detector.pt  gate_detector_last.pt
configs/: aggressive.yaml  base.yaml  hard.yaml  ml_vision.yaml  physical.yaml  r1_qualifier.yaml  r2_qualifier.yaml  stress.yaml
docs/: ARCHITECTURE.md  TRAINING.md
scripts/: _bench.py  _profile.py  _validate.py  analyze_log.py  demo.py  eval_centering.py  eval_detector.py  gen_dataset.py  run_episode.py  sweep.py  train_detector.py  visualize_mock.py
tests/: conftest.py
tests/integration/: test_gate_sequence.py  test_pipeline_smoke.py
tests/unit/: test_augmentation.py  test_config.py  test_controller.py  test_fusion.py  test_progress.py  test_recovery.py  test_risk.py  test_stability.py  test_timing.py  test_types.py  test_vision.py
